--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.7.2",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^4.1.17",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.38.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "serve": "^13.0.2"
